--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-#REACT_APP_API_HAMBURGUESERIA=http://localhost:3004/products
-#REACT_APP_API_HAMBURGUESERIA=http://localhost:4001/apiBurgers
-REACT_APP_API_HAMBURGUESERIA=https://crudburgersc23i.onrender.com/apiBurgers
+#REACT_APP_API_HAMBURGUESERIA=http://localhost:3000/products
+REACT_APP_API_HAMBURGUESERIA=http://localhost:4001/apiBurgers/
+#REACT_APP_API_HAMBURGUESERIA=https://crudburgersc23i.onrender.com/apiBurgers
